      (such as those from views) are automatically expired
      after an INSERT or UPDATE, assuming they have not been
      locally modified, so that they are refreshed with the
      most recent data upon access.  [ticket:887]

    - Fixed explicit, self-referential joins between two 
      joined-table inheritance mappers when using 
      query.join(cls, aliased=True).  [ticket:1082]
      
0.5beta1
========
    - An ongoing document describing the changes from 0.4 to 0.5
      is at:  http://www.sqlalchemy.org/trac/wiki/05Migration

      For this section, the list below primarily lists changes 
      within the attribute instrumentation API and is only a
      small fraction of the full changes between 0.4/0.5.

    - The "__init__" trigger/decorator added by mapper now attempts
      to exactly mirror the argument signature of the original
      __init__.  The pass-through for '_sa_session' is no longer
      implicit- you must allow for this keyword argument in your
      constructor.

    - ClassState is renamed to ClassManager.

    - Classes may supply their own InstrumentationManager by
      providing a __sa_instrumentation_manager__ property.

    - Custom instrumentation may use any mechanism to associate a
      ClassManager with a class and an InstanceState with an
      instance.  Attributes on those objects are still the default
      association mechanism used by SQLAlchemy's native
      instrumentation.

    - Moved entity_name, _sa_session_id, and _instance_key from the
      instance object to the instance state.  These values are still
      available in the old way, which is now deprecated, using
      descriptors attached to the class.  A deprecation warning will
      be issued when accessed.

    - The _prepare_instrumentation alias for prepare_instrumentation
      has been removed.

    - sqlalchemy.exceptions has been renamed to sqlalchemy.exc.  The
      module may be imported under either name.
